# FLoRaSat_MLBox

./: .gitignore  Makefile  README.md  doxy.cfg  florasat-v3-edu  makefrag  makemakefiles  setinet.sh
Files_for_plots/: GeneratePlots_PDR.ipynb  ML_lstm_run_stats_trx_at_dev.pkl  ML_lstm_run_stats_trx_at_sat.pkl  ML_trf_run_stats_trx_at_dev.pkl  ML_trf_run_stats_trx_at_sat.pkl  noML_run_stats_trx_at_dev.pkl  noML_run_stats_trx_at_sat.pkl
Files_of_ml_models/scripts/: Contexto del problema — DtS-IoT Baseli.md  README.md  (+30 more)
florasatcli/: README.md
florasatcli/florasat_cli/: .gitignore  README.md  pyproject.toml
florasatcli/florasat_cli/src/florasat/: __main__.py  cli.py
florasatcli/florasat_cli/src/florasat/config/: command.py
florasatcli/florasat_cli/src/florasat/scenario/: command.py
florasatcli/florasat_cli/src/florasat/statistics/: analyze_deliveryratio.py  analyze_distances.py  analyze_e2edelay.py  analyze_hopcount.py  analyze_packetloss.py  analyze_queues.py  analyze_throughput.py  command.py  compare_congestion_scenarios.py  compare_delays.py  compare_failure_scenarios.py  compare_queuing_delay.py  create_drop_heatmap.py  paramstudy_altitude.py  paramstudy_datarate.py  paramstudy_inclination.py  preprocess_routes.py  preprocess_satellites.py  utils.py
florasatcli/florasat_cli/src/florasat/utils/: dir_path.py
florasatcli/florasat_statistics/: Cargo.toml  README.md  florasat_statistics.pyi  pyproject.toml
florasatcli/florasat_statistics/src/: lib.rs  routes.rs  satstats.rs
simulations/: package.ned
src/: Makefile  makefrag  model_scripted.pt
(+3191 files in other folders)
