[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "florasat"
version = "0.0.1"
description = "Command-line interface for FLoRaSat"
requires-python = ">=3.7"
readme = "README.md"
authors = [{ name = "Robin Ohs", email = "me@robinohs.dev" }]
dependencies = ["florasat ~=0.0.1"]

[project.urls]
"Homepage" = "https://gitlab.inria.fr/jfraire/florasat"

[project.scripts]
florasat = "florasat.__main__:main"
