[package]
name = "florasat_statistics"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "florasat_statistics"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.2"
itertools = "0.11.0"
map_3d = "0.1.5"
pyo3 = "0.19.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.183", features = ["serde_derive"] }

[profile.dev]
opt-level = 3
overflow-checks = false

[dev-dependencies]
stringreader = "0.1.1"
